--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <title>Write Log</title>
+    <title>Visual Literature</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
